--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.445.0",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
+    "next-auth": "^4.24.10",
     "next-cloudinary": "^6.14.1",
     "next-themes": "^0.3.0",
     "react": "^18",
